<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".presentation.main.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connectez_vous"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:layout_marginTop="100dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entrez_votre_login"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/entrez_votre_login" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entrez_votre_password"
            android:inputType="textPassword"
            android:autofillHints="@string/entrez_votre_password" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/login_button"
                android:layout_height="60dp"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/se_connecter"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Button
                android:id="@+id/create_account_button"
                android:layout_height="60dp"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/s_inscrire"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>